--- a/pages/verification.html
+++ b/pages/verification.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verification - CampusConnect</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/verification.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/verification.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="/js/verification.js" defer></script>
+    <script src="js/verification.js" defer></script>
 </head>
 <body>
     <div class="app-wrapper">
